# ImageProcessing

Asignment1/: A1.docx  Assignment1  Assignment1.cpp  CMakeCache.txt  CMakeLists.txt  GaussianGenerator.cpp  Makefile  cmake_install.cmake  compile_commands.json  out.txt
Asignment1/.cache/clangd/index/: Assignment1.cpp.EF7D0A10B812836E.idx
Asignment1/.cmake/api/v1/reply/: cache-v2-b0b674ab3e185f2d3a5d.json  cmakeFiles-v1-0be0fa607f85a9eca1cf.json  codemodel-v2-2686922641454af5edee.json  index-2023-04-15T14-45-13-0502.json  target-Assignment1-94418fb34d6105138001.json
Asignment1/test/: err.txt  main  main.cpp  tools.cpp  tools.hpp
Assignment2/: A2.docx  Assignment2  Assignment2.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  ~$A2.docx
Assignment2/.cache/clangd/index/: Assignment2.cpp.F5C3057163EFE6AC.idx
Assignment2/.cmake/api/v1/reply/: cache-v2-3622a6ed9e3cbe3c7b64.json  cmakeFiles-v1-19ee8dc51710a8edf5fb.json  codemodel-v2-6d964ef0f4317adbe084.json  index-2023-04-21T18-55-20-0121.json  target-Assignment2-db773096ae8b887de639.json
TermProject/: ;  CMakeCache.txt  CMakeLists.txt  Makefile  Project_updated (2).docx  Report.docx  TermProject  TermProject.cpp  cmake_install.cmake  compile_commands.json  train.cpp
TermProject/.cache/clangd/index/: TermProject.cpp.EAA18DFBE39C0C97.idx
TermProject/.cmake/api/v1/reply/: cache-v2-1dea2a7c51e6bdf89b88.json  cmakeFiles-v1-65b8883d2fb4cbae5a60.json  codemodel-v2-17c9b7dacebbcccb91f3.json  index-2023-05-02T03-23-17-0142.json  target-TermProject-b812ff4b5a402f2b5b3d.json
